[UM-5177] Generate OAS json file on build