@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.apifest</groupId>
   <artifactId>apifest-doclet</artifactId>
-  <version>2.0.0</version>
+  <version>3.0.0</version>
 
   <distributionManagement>
     <snapshotRepository>
@@ -82,6 +82,15 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <compilerVersion>${java.version}</compilerVersion>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
